--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="home_background_start">#22343C</color>
+    <color name="home_background_end">#1F2E35</color>
+    <color name="text_gray">#96A7AF</color>
+    <color name="post_background">#30444E</color>
+
 </resources>
