--- a/app/src/main/res/layout/item_img_layout.xml
+++ b/app/src/main/res/layout/item_img_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
     android:layout_height="match_parent">
 
@@ -8,6 +9,8 @@
         android:layout_width="match_parent"
         android:id="@+id/postDetailsImg"
         android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/roundedImgView"
+
         android:layout_height="300dp"/>
 
 </FrameLayout>
