--- a/app/src/main/res/layout/item_story_layout.xml
+++ b/app/src/main/res/layout/item_story_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/imgPost"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+            app:shapeAppearanceOverlay="@style/roundedImgView"
         android:scaleType="center" />
 
     <androidx.appcompat.widget.AppCompatTextView
