--- a/app/src/main/res/values/custom_style.xml
+++ b/app/src/main/res/values/custom_style.xml
@@ -5,4 +5,10 @@
         <item name="cornerSize">50%</item>
     </style>
     
+    <style name="roundedImgView">
+
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
+    </style>
+
 </resources>
