--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,9 @@
         android:layout_width="match_parent"
         android:id="@+id/bottom_navigation_view"
         app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:itemBackground="@drawable/bottom_navigation_item"
         android:background="@drawable/bottom_navigation_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
